seperate into seperate file

--- a/game/hlvr/cfg/skill_manifest.cfg
+++ b/game/hlvr/cfg/skill_manifest.cfg
@@ -5,5 +5,6 @@ exec skill_hlvr.cfg
 script_reload_code flashlight
 script_reload_code jumpfix
 script_reload_code novr
+script_reload_code aimsights
 
 sk_headcrab_runner_health 69
